Clean up and write up things.